Django学习之校务系统第4次提交

--- a/templates/class.html
+++ b/templates/class.html
@@ -50,7 +50,7 @@
     $('#btn-cancel,#btn-remove').click(function () {
         $('.modal,.shade,.fuck').addClass('hide')
     });
-
+    {#ergfl]ef;e#}
 
 
     </script>
