--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,9 +35,17 @@
 </div>
 {#  “添加”功能遮罩层  #}
 <div class="modal hide">
-        <input type="text" placeholder="标题">
-        <input type="button" value="取消" id="btn-cancel">
-        <input type="button" value="确定">
+{#    <form action="/class/" method="post">#}
+{#        {% csrf_token %}#}
+{#        <input type="text" placeholder="标题" name="caption">#}
+{#        <input type="button" value="取消" id="btn-cancel">#}
+{#        <input type="submit" value="确定">#}
+{#    </form>#}
+
+
+    <input type="text" placeholder="标题" name="caption">
+    <input type="button" value="取消" id="btn-cancel">
+    <input type="button" id= "modal_ajax_submit" value="Ajax">
 </div>
 {#  “删除”功能的遮罩层  #}
 <div class="fuck hide">
